# reddit-agent

./: .env.example  .gitignore  .npmignore  AGENTS.md  INSTALL.md  LICENSE  README.md  TEST_GUIDE.md  install.sh  package.json  pyproject.toml
data/: cookies.json  subreddits.yaml
lib/: bootstrap.js
openclaw/: HEARTBEAT_SNIPPET.md  SKILL.md
prompts/: evaluate_thread.md  evaluate_thread_karma.md  generate_comment.md  generate_comment_karma.md  quality_check.md  subreddit_intel.md
src/: config.py  db.py  health.py  llm.py  log.py  main.py
src/browser/: actions.py  captcha.py  dms.py  engage.py  inbox.py  karma.py  session.py  stealth.py
src/cadence/: manager.py
src/feedback/: learning.py  loop.py
src/integrations/: slack.py  tracker.py
src/intelligence/: evaluator.py  generator.py  quality_scorer.py  subreddit_intel.py
src/scanner/: subreddit.py
tests/: test_cadence.py  test_config.py  test_db.py  test_stealth.py
