[project]
name = "reddit-agent"
version = "0.1.0"
description = "Autonomous Reddit engagement agent using browser-use + Claude API"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.2.0",
    "playwright>=1.40.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
