[project]
name = "reddit-agent"
version = "0.1.0"
description = "Autonomous Reddit engagement agent for OpenClaw. Stealth browser posting, karma building, shadowban detection, learning loop."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Sohazur", email = "mdsohazurislam@gmail.com"}]
keywords = ["reddit", "automation", "openclaw", "ai-agent", "browser-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "browser-use>=0.2.0",
    "playwright>=1.40.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
reddit-agent = "src.main:cli"

[project.urls]
Homepage = "https://github.com/sohazur/reddit-agent"
Repository = "https://github.com/sohazur/reddit-agent"
Issues = "https://github.com/sohazur/reddit-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["prompts/**", "data/subreddits.yaml", "openclaw/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
